@@ -1003,7 +1003,7 @@ function imagepicker_get_userpath($userdir, $dirsep = '/') {
  * @param boolean $public
  * @return string
  */
-function imagepicker_get_image_path($img, $type = 'browser', $public = FALSE) {
+function imagepicker_get_image_path($img, $type = 'browser', $public = FALSE, $preset = FALSE) {
   $userdir = is_array($public) ? $public : TRUE;
   $imgbasedir = imagepicker_get_path(FALSE, $userdir);
   $found = FALSE;
@@ -1065,16 +1065,26 @@ function imagepicker_get_image_path($img, $type = 'browser', $public = FALSE) {
   }
   if ($found) {
     if ($suffix) {
-      if (variable_get('imagepicker_use_full_url', 0) || variable_get('file_default_scheme', 'public') == 'private') {
-        $imgpath = file_create_url(IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $suffix . '/' . $img_name);
+      if (imagepicker_variable_get('imagepicker_use_full_url', 0) || variable_get('file_default_scheme', 'public') == 'private') {
+        if (module_exists('image') && imagepicker_variable_get('imagepicker_image_enable', 0) && $preset && $suffix == IMAGEPICKER_THUMBS_DIR) {
+          $imgpath = image_style_url('__PRESET__', IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $suffix . '/' . $img_name);
+        }
+        else {
+          $imgpath = file_create_url(IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $suffix . '/' . $img_name);
+        }
       }
       else {
         $imgpath = imagepicker_get_path(TRUE, $userdir) . $suffix . '/' . $img_name;
       }
     }
     else {
-      if (variable_get('imagepicker_use_full_url', 0) || variable_get('file_default_scheme', 'public') == 'private') {
-        $imgpath = file_create_url(IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $img_name);
+      if (imagepicker_variable_get('imagepicker_use_full_url', 0) || variable_get('file_default_scheme', 'public') == 'private') {
+        if (module_exists('image') && imagepicker_variable_get('imagepicker_image_enable', 0) && $preset) {
+          $imgpath = image_style_url('__PRESET__', IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $img_name);
+        }
+        else {
+          $imgpath = file_create_url(IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $img_name);
+        }
       }
       else {
         $imgpath = imagepicker_get_path(TRUE, $userdir) . $img_name;
